--- a/main.css
+++ b/main.css
@@ -1,5 +1,11 @@
+body {
+  background-color: midnightblue;
+}
 .card-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+}
+
+div {
+  margin: 20px;
 }
